--- a/MonopHelper/Pages/TurnBased/Shared/_TurnLayout.cshtml
+++ b/MonopHelper/Pages/TurnBased/Shared/_TurnLayout.cshtml
@@ -41,6 +41,7 @@
 <script src="~/js/site.js" asp-append-version="true"></script>
 <script src="~/js/admin.js" asp-append-version="true"></script>
 <script src="~/js/Cards/Cards.js" asp-append-version="true"></script>
+<script src="~/js/TurnBased/play.js" asp-append-version="true"></script>
 <script src="~/js/sweetalert2.min.js" asp-append-version="true"></script>
 <script src="~/js/chosen.jquery.js" asp-append-version="true"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
