fixes and version update

--- a/MonopHelper/Pages/Index.cshtml
+++ b/MonopHelper/Pages/Index.cshtml
@@ -10,23 +10,8 @@
     </div>
     <div class="card-body bg-light">
         <div class="mb divider">
-            <h4>Create Standard Game</h4>
-            <p>
-                Create a new standard game that acts as an aid to the real game.
-                <br/>
-                This type of game can store and track player's dice numbers, jail cost, triples, free parking properties, and loans.
-            </p>
-            <button class="btn btn-info text-white mt mb" onclick="location.assign('/Create')">New Standard Game</button>
-        </div>
-        <div class="mb divider">
-            <h4>Manage Game Cards</h4>
-            <p>
-                Upload new chance, community chest, and jeopardy cards.
-            </p>
-            <div style="display: inline">
-                <button class="btn btn-info text-white mt mb mr" onclick="location.assign('/Cards/Index')">Play Cards</button>
-                <button class="btn btn-warning mt mb" onclick="location.assign('/Cards/Manage')">Manage Cards</button>
-            </div>
+            <h4>Turn Games</h4>
+            <button class="btn btn-info text-white mt mb" onclick="location.assign('/TurnBased/Index')">Create & Play Turn Games</button>
         </div>
         <div class="mb divider">
             <h4>Software Versions</h4>
