--- a/MonopHelper/Pages/Shared/TurnBased/_PlayerPartial.cshtml
+++ b/MonopHelper/Pages/Shared/TurnBased/_PlayerPartial.cshtml
@@ -229,6 +229,7 @@
                                                         <p class="text-center p-2" style="margin-bottom: 0"><b>@rp.Name</b></p>
                                                     </div>
                                                     <div class="p-2">
+                                                        <p><span class="money">₩</span>@rp.ReservedAmount/@rp.Cost</p>
                                                         <button class="btn btn-sm btn-success" style="width: 100%"
                                                                 onclick="unlockRes('@(rp.Id)','@(rp.Name)','@(Model?.GamePid)')">
                                                             Unlock
