--- a/MonopHelper/Pages/Shared/_Layout.cshtml
+++ b/MonopHelper/Pages/Shared/_Layout.cshtml
@@ -30,30 +30,39 @@
             </button>
             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
-                    <li class="nav-item dropdown ml mr">
-                        <a class="nav-link dropdown-toggle text-dark" href="#" id="standardGameDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Standard Game
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="standardGameDropdown">
-                            <li><a class="dropdown-item" asp-page="/Create">New Game</a></li>
-                            <li><a class="dropdown-item" asp-page="/Load">Load Game</a></li>
-                        </ul>
+                    <li class="nav-item ml mr">
+                        <a class="nav-link text-dark" asp-page="/TurnBased/Index">Turn Game</a>
                     </li>
 
                     <li class="nav-item dropdown ml mr">
-                        <a class="nav-link dropdown-toggle text-dark" href="#" id="cardsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Cards
+                        <a class="nav-link dropdown-toggle text-dark" href="#" id="playersDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Players
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="cardsDropdown">
-                            <li><a class="dropdown-item" asp-page="/Cards/Index">Play Cards</a></li>
-                            <li><a class="dropdown-item" asp-page="/Cards/Manage">Manage Cards</a></li>
+                        <ul class="dropdown-menu" aria-labelledby="playersDropdown">
+                            <li><a class="dropdown-item" asp-page="/Players/Index">Player List</a></li>
+                            <li><a class="dropdown-item" asp-page="/Players/Edit/0">New Player</a></li>
                         </ul>
                     </li>
-            
+
+                    <li class="nav-item ml mr">
+                        <a class="nav-link text-dark" asp-page="/Cards/Manage">Manage Cards</a>
+                    </li>
+
                     <li class="nav-item ml mr">
                         <a class="nav-link text-dark" asp-page="/Version">
                             Version History
                         </a>
+                    </li>
+
+                    <li class="nav-item dropdown ml mr">
+                        <a class="nav-link dropdown-toggle text-dark" href="#" id="legacyGameDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Legacy
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="legacyGameDropdown">
+                            <li><a class="dropdown-item" asp-page="/Create">New Game</a></li>
+                            <li><a class="dropdown-item" asp-page="/Load">Load Game</a></li>
+                            <li><a class="dropdown-item" asp-page="/Cards/Index">Play Cards</a></li>
+                        </ul>
                     </li>
                 </ul>
                 <partial name="_LoginPartial"/>
