--- a/MonopHelper/Pages/Version.cshtml
+++ b/MonopHelper/Pages/Version.cshtml
@@ -11,6 +11,41 @@
     </div>
     <div class="card-body bg-light">
         <div class="divider mb-3">
+            <h3>1.3 Builds</h3>
+            <div class="h-line"></div>
+
+            <h4>Version: 1.3.5</h4>
+            <div class="list mb">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        Brand new turn based game
+                    </li>
+                    <li class="list-group-item">
+                        In turn based games, you can see who's turn it is and information relating to that player.
+                    </li>
+                    <li class="list-group-item">
+                        All functionality of the standard game (legacy game) can be done in a turn based game.
+                    </li>
+                    <li class="list-group-item">
+                        Turn based games now track mortgaged properties and calculate the fee a player must pay when passing GO.
+                    </li>
+                    <li class="list-group-item">
+                        Turn based games now track reserved properties and calculate the option fee to pay in order to unlock the reserved properties.
+                    </li>
+                    <li class="list-group-item">
+                        Cards are now in a turn based game.
+                    </li>
+                    <li class="list-group-item">
+                        Players can be created and selected for games.
+                    </li>
+                    <li class="list-group-item">
+                        The number of wins a player has is tracked.
+                    </li>
+                </ul>
+            </div>
+        </div>
+        
+        <div class="divider mb-3">
             <h3>1.2 Builds</h3>
             <div class="h-line"></div>
 
@@ -18,11 +53,11 @@
             <div class="list mb">
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">
-                        Card types now how a colour option.
+                        Card types now have a colour option.
                     </li>
                 </ul>
             </div>
-            
+
             <h4>Version: 1.2.4</h4>
             <div class="list mb">
                 <ul class="list-group list-group-flush">
@@ -34,7 +69,7 @@
                     </li>
                 </ul>
             </div>
-            
+
             <h4>Version: 1.2.3</h4>
             <div class="list mb">
                 <ul class="list-group list-group-flush">
@@ -54,12 +89,12 @@
                 </ul>
             </div>
         </div>
-        
+
 
         <div class="divider mb-3">
             <h3>1.1 Builds</h3>
             <div class="h-line"></div>
-            
+
             <h4>Version: 1.1.3</h4>
             <div class="list mb">
                 <ul class="list-group list-group-flush">
@@ -117,7 +152,7 @@
                 </ul>
             </div>
         </div>
-       
+
 
         <div class="divider">
             <h3>1.0 Builds</h3>
