--- a/MonopHelper/Pages/Shared/_Layout.cshtml
+++ b/MonopHelper/Pages/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="playersDropdown">
                             <li><a class="dropdown-item" asp-page="/Players/Index">Player List</a></li>
-                            <li><a class="dropdown-item" asp-page="/Players/Edit/0">New Player</a></li>
+                            <li><a class="dropdown-item" asp-page="/Players/Edit">New Player</a></li>
                         </ul>
                     </li>
 
