--- a/MonopHelper/Pages/Version.cshtml
+++ b/MonopHelper/Pages/Version.cshtml
@@ -14,6 +14,24 @@
             <h3>1.3 Builds</h3>
             <div class="h-line"></div>
 
+            <h4>Version: 1.3.6</h4>
+            <div class="list mb">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        Fixed authorisation on turn based game pages.
+                    </li>
+                    <li class="list-group-item">
+                        Fixed custom loan repayment amount and loan repayments on front-end.
+                    </li>
+                    <li class="list-group-item">
+                        Made dropdown panels in turn based games 100% view height.
+                    </li>
+                    <li class="list-group-item">
+                        Added all player's numbers to main screen regardless of who's turn it is.
+                    </li>
+                </ul>
+            </div>
+
             <h4>Version: 1.3.5</h4>
             <div class="list mb">
                 <ul class="list-group list-group-flush">
