--- a/MonopHelper/Pages/Players/Index.cshtml
+++ b/MonopHelper/Pages/Players/Index.cshtml
@@ -14,6 +14,7 @@
         <table class="table table-striped table-hover">
             <thead>
             <tr class="table-dark">
+                <th style="width: 50px"></th>
                 <th>Player Name</th>
                 <th>Wins</th>
                 <th style="width: 60px"></th>
@@ -24,6 +25,7 @@
                 foreach (var player in Model.Players)
                 {
                     <tr>
+                        <td style="background: @(player.Colour);"></td>
                         <td>@player.Name</td>
                         <td>@player.Wins</td>
                         <td>
