--- a/MonopHelper/Pages/TurnBased/Play.cshtml
+++ b/MonopHelper/Pages/TurnBased/Play.cshtml
@@ -1,5 +1,7 @@
 @page "{id?}"
 @using MonopolyCL.Extensions
+@using MonopolyCL.Helpers
+@using MonopolyCL.Models.Players.DataModel
 @using MonopolyCL.Models.Properties.Enums
 @model MonopHelper.Pages.TurnBased.Play
 
@@ -21,7 +23,11 @@
 
 <div class="row align-items-center mt-4 mb-2">
     <div class="col-8">
-        <div class="bg-info text-white p-3" style=" box-shadow: 2px 5px 18px #888888;">
+        @{
+            var font = ColourHelper.FontColour(Model.CurrentPlayer?.Colour ?? "#000000");
+            var col = Model.CurrentPlayer?.Colour ?? "#000000";
+        }
+        <div class="p-3" style="background: @col; color: @font; box-shadow: 2px 5px 18px #888888;">
             <h1 class="text-center">@(Model.CurrentPlayer?.Name ?? "[ERROR]")'s Turn</h1>
         </div>
     </div>
@@ -43,6 +49,44 @@
 <div class="row mb-4">
     <div class="col-4">
         <div class="card mt mb">
+            <div class="card-header bg-info text-white">
+                Player Numbers
+            </div>
+            <div class="card-body bg-light">
+                <ul class="list-group list-group-flush">
+                    @{
+                        foreach (var player in Model.Game.Players)
+                        {
+                            <li class="list-group-item" style="background: inherit !important;">
+                                <h5 class="badge rounded-pill plyrLabel-@(player.Id)">
+                                    <div class="row">
+                                        <div class="col-sm-6">
+                                            <span class="fa-solid fa-dice"></span> @player.Name:
+                                        </div>
+                                        <div class="col-sm-6">
+                                            @player.DiceNumber?.Dice1 | @player.DiceNumber?.Dice2
+                                        </div>
+                                    </div>
+                                </h5>
+                            </li>
+                            
+                            var fontCol = ColourHelper.FontColour(player.Colour);
+                            <style>
+                                .plyrLabel-@(player.Id){
+                                    background: @(player.Colour);
+                                    color: @(fontCol);
+                                    width: 100%;
+                                    padding: 10px;
+                                    font-size: 1rem;
+                                    overflow-wrap: break-word;
+                                }
+                            </style>    
+                        }
+                    }
+                </ul>
+            </div>
+        </div>
+        <div class="card mt mb">
             <div class="card-header bg-success text-white">
                 Cards
             </div>
@@ -57,19 +101,22 @@
                                 @type.Type.Name Card
                             </button>
                         </div>
+                        
+                        var fontCol = ColourHelper.FontColour(type.Type.Colour);
+                        var hovCol = ColourHelper.HoverColour(type.Type.Colour);
 
                         <style>
                             .typeBtn-@(type.Type.Id){
                                 background: @(type.Type.Colour);
-                                color: @(type.Type.FontColour());
+                                color: @(fontCol);
                                 width: 100%;
                                 height: 60px;
                                 overflow-wrap: break-word;
                             }
             
                             .typeBtn-@(type.Type.Id):hover{
-                                background: @(type.Type.HoverColour());
-                                color: @(type.Type.FontColour());
+                                background: @(hovCol);
+                                color: @(fontCol);
                             }
                         </style>
                     }
@@ -88,7 +135,7 @@
     </form>
 </div>
 
-<div class="offcanvas offcanvas-top" tabindex="-1" id="fp-oc" aria-labelledby="fp-oc-label" style="height: 50%; overflow-y: scroll;">
+<div class="offcanvas offcanvas-top" tabindex="-1" id="fp-oc" aria-labelledby="fp-oc-label" style="height: 90%; overflow-y: scroll;">
     <div class="container-xxl">
         <div class="offcanvas-header">
             <h2 id="fp-oc-label">Hand a Property into Free Parking</h2>
@@ -106,7 +153,7 @@
     </div>
 </div>
 
-<div class="offcanvas offcanvas-top" tabindex="-1" id="mp-new" aria-labelledby="mp-new-label" style="height: 50%; overflow-y: scroll;">
+<div class="offcanvas offcanvas-top" tabindex="-1" id="mp-new" aria-labelledby="mp-new-label" style="height: 90%; overflow-y: scroll;">
     <div class="container-xxl">
         <div class="offcanvas-header">
             <h2 id="mp-new-label">Mortgage a Property</h2>
@@ -124,7 +171,7 @@
     </div>
 </div>
 
-<div class="offcanvas offcanvas-top" tabindex="-1" id="mp-pay" aria-labelledby="mp-pay-label" style="height: 50%; overflow-y: scroll;">
+<div class="offcanvas offcanvas-top" tabindex="-1" id="mp-pay" aria-labelledby="mp-pay-label" style="height: 90%; overflow-y: scroll;">
     <div class="container-xxl">
         <div class="offcanvas-header">
             <h2 id="mp-pay-label">Pay Mortgage Fee</h2>
@@ -160,7 +207,7 @@
         </div>
     </div>
 </div>
-<div class="offcanvas offcanvas-top" tabindex="-1" id="l-pay" aria-labelledby="l-pay-label" style="height: 50%; overflow-y: scroll;">
+<div class="offcanvas offcanvas-top" tabindex="-1" id="l-pay" aria-labelledby="l-pay-label" style="height: 90%; overflow-y: scroll;">
     <div class="container-xxl">
         <div class="offcanvas-header">
             <h2 id="l-pay-label">Repay Loans</h2>
@@ -172,13 +219,14 @@
                 <div class="row">
                     <div class="col-sm-6">
                         @{
-                            var totalLoan = Model.CurrentPlayer?.Loans.Select(l => l.Amount).Sum() ?? 0;
-                            var repaid = Model.CurrentPlayer?.Loans.Select(l => l.RepaidAmount).Sum() ?? 0;
-                            var outStanding = Model.CurrentPlayer?.Loans.Select(l => l.Outstanding()).Sum() ?? 0;
-                            var p5 = Model.CurrentPlayer?.Loans.Select(l => l.Pass(1)).Sum() ?? 0;
-                            var p10 = Model.CurrentPlayer?.Loans.Select(l => l.Pass(2)).Sum() ?? 0;
-                            var p15 = Model.CurrentPlayer?.Loans.Select(l => l.Pass(3)).Sum() ?? 0;
-                            var p20 = Model.CurrentPlayer?.Loans.Select(l => l.Pass(4)).Sum() ?? 0;
+                            var activeLoans = Model.CurrentPlayer?.Loans.Where(l => !l.Repaid).ToList() ?? [];
+                            var totalLoan = activeLoans.Select(l => l.Amount).Sum();
+                            var repaid = activeLoans.Select(l => l.RepaidAmount).Sum();
+                            var outStanding = activeLoans.Select(l => l.Outstanding()).Sum();
+                            var p5 = activeLoans.Select(l => l.Pass(1)).Sum();
+                            var p10 = activeLoans.Select(l => l.Pass(2)).Sum();
+                            var p15 = activeLoans.Select(l => l.Pass(3)).Sum();
+                            var p20 = activeLoans.Select(l => l.Pass(4)).Sum();
                         }
                         <table class="table table-striped table-hover mb-3">
                             <thead>
@@ -261,7 +309,7 @@
     </div>
 </div>
 
-<div class="offcanvas offcanvas-top" tabindex="-1" id="l-new" aria-labelledby="l-new-label" style="height: 50%; overflow-y: scroll;">
+<div class="offcanvas offcanvas-top" tabindex="-1" id="l-new" aria-labelledby="l-new-label" style="height: 90%; overflow-y: scroll;">
     <div class="container-xxl">
         <div class="offcanvas-header">
             <h2 id="l-new-label">Mortgage a Property</h2>
@@ -281,7 +329,7 @@
     </div>
 </div>
 
-<div class="offcanvas offcanvas-top" tabindex="-1" id="card-take" aria-labelledby="card-take-label" style="height: 30%; overflow-y: scroll;">
+<div class="offcanvas offcanvas-top" tabindex="-1" id="card-take" aria-labelledby="card-take-label" style="height: 90%; overflow-y: scroll;">
     <div class="container-xxl">
         <div class="offcanvas-header">
             <h2 id="card-take-label">Card</h2>
@@ -293,7 +341,7 @@
     </div>
 </div>
 
-<div class="offcanvas offcanvas-top" tabindex="-1" id="rp-new" aria-labelledby="rp-new-label" style="height: 50%; overflow-y: scroll;">
+<div class="offcanvas offcanvas-top" tabindex="-1" id="rp-new" aria-labelledby="rp-new-label" style="height: 90%; overflow-y: scroll;">
     <div class="container-xxl">
         <div class="offcanvas-header">
             <h2 id="rp-new-label">Reserve a Property</h2>
@@ -311,7 +359,7 @@
     </div>
 </div>
 
-<div class="offcanvas offcanvas-top" tabindex="-1" id="rp-pay" aria-labelledby="rp-pay-label" style="height: 50%; overflow-y: scroll;">
+<div class="offcanvas offcanvas-top" tabindex="-1" id="rp-pay" aria-labelledby="rp-pay-label" style="height: 90%; overflow-y: scroll;">
     <div class="container-xxl">
         <div class="offcanvas-header">
             <h2 id="rp-pay-label">Pay Reservation Fee</h2>
